# symbolic-model-checker-planning

./: .gitignore  CMakeLists.txt  README  build.sh  setup.sh
lib/: CMakeLists.txt  cudd  gtest
smcp/: CMakeLists.txt  smcp.cc  smcp.cpp  smcp.h
tests/: CMakeLists.txt  sample1_unittest.cc  smcp_unittest.cc  test.cpp
